--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "devDependencies": {
     "@types/chai": "^3.5.1",
     "@types/mocha": "^2.2.41",
+    "@types/node": "^7.0.14",
     "@types/xlsx": "0.0.33",
     "browserify": "^14.3.0",
     "chai": "^3.5.0",
     "ts-node": "^3.0.2",
     "tsify": "^3.0.1",
-    "typescript": "^2.2.2"
+    "typescript": "^2.2.2",
+    "xlsx": "^0.9.12"
   }
 }
